Added Willy showcase image.